--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/home_logo.png
+    - images/chloe.png
+    - images/suhani.png
+    - images/sahasra.png
+    - images/varshi.png
+    - images/dana.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
